Updated title + desc.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Workspace Title</h1>
-<p>Workspace Desc.</p>
+<h1>Banana Taffy</h1>
+<p>Programming practice space. I love you <3</p>
 <button onclick="document.location='alex.html'">Alex</button>
 <button onclick="document.location='sara.html'">Sara</button>
 </body>
