--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Banana Taffy</h1>
-<p>Programming practice space. I love you <3</p>
-<button onclick="document.location='alex.html'">Alex</button>
-<button onclick="document.location='sara.html'">Sara</button>
-</body>
+	<head>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<h1>Banana Taffy</h1>
+		<p>Programming practice space. I love you <3</p>
+		<button onclick="document.location='alex.html'">Alex</button>
+		<button onclick="document.location='sara.html'">Sara</button>
+	</body>
 </html>
