--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
+		<center>
 		<h1>Banana Taffy</h1>
 		<p>Programming practice space. I love you <3</p>
+		<br>
 		<button onclick="document.location='alex.html'">Alex</button>
 		<button onclick="document.location='sara.html'">Sara</button>
+		<br>
+		<br>
+		</center>
 	</body>
 </html>
