--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<h1>Banana Taffy</h1>
 		<p>Programming practice space. I love you <3</p>
 		<br>
-		<button onclick="document.location='alex.html'">Alex</button>
-		<button onclick="document.location='sara.html'">Sara</button>
+		<button class="button" onclick="document.location='alex.html'">Alex</button>
+		<button class="button" onclick="document.location='sara.html'">Sara</button>
 		<br>
 		<br>
 		</center>
