more button sexy yes

--- a/sara.html
+++ b/sara.html
@@ -4,11 +4,15 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
+	<center>
 		<h1>Sara's Projects</h1>
 		<p>Yeehaw.</p>
-		<button onclick="document.location='sara_projects/1.html'">Untitled</button>
-		<button onclick="document.location='sara_projects/2.html'">Untitled2</button>
+		<button class="button" onclick="document.location='sara_projects/1.html'">Untitled</button>
+		<button class="button" onclick="document.location='sara_projects/2.html'">Untitled2</button>
 		<br>
-		<button onclick="document.location='index.html'">Back</button>
+		<br>
+		<br>
+		<button class="button" onclick="document.location='index.html'">Back</button>
+		</center>
 	</body>
 </html> 
