--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<body>
 		<center>
 		<h1>Banana Taffy</h1>
-		<p>Programming practice space. I love you <3</p>
+		<p>Programming practice space. I love you!</p>
+		<p style="color:red"><3</p>
 		<br>
 		<button class="button" onclick="document.location='alex.html'">Alex</button>
 		<button class="button" onclick="document.location='sara.html'">Sara</button>
