--- a/sara.html
+++ b/sara.html
@@ -5,14 +5,16 @@
 	</head>
 	<body>
 	<center>
-		<h1>Sara's Projects</h1>
-		<p>Yeehaw.</p>
-		<button class="button" onclick="document.location='sara_projects/1.html'">Untitled</button>
-		<button class="button" onclick="document.location='sara_projects/2.html'">Untitled2</button>
-		<br>
-		<br>
-		<br>
-		<button class="button" onclick="document.location='index.html'">Back</button>
-		</center>
+		<div class="textbox">
+			<h1>Sara's Projects</h1>
+			<p>Yeehaw.</p>
+			<button class="button" onclick="document.location='sara_projects/1.html'">Untitled</button>
+			<button class="button" onclick="document.location='sara_projects/2.html'">Untitled2</button>
+			<br>
+			<br>
+			<br>
+			<button class="button" onclick="document.location='index.html'">Back</button>
+			</center>
+		</div>
 	</body>
 </html> 
