--- a/alex.html
+++ b/alex.html
@@ -4,15 +4,17 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<center>
-		<h1>Alex's Projects</h1>
-		<p>Yeehaw.</p>
-		<button class="button" onclick="document.location='alex_projects/1.html'">Untitled</button>
-		<button class="button" onclick="document.location='alex_projects/2.html'">Untitled2</button>
-		<br>
-		<br>
-		<br>
-		<button class="button" onclick="document.location='index.html'">Back</button>
-		</center>
+		<div class="textbox">
+			<center>
+			<h1>Alex's Projects</h1>
+			<p>Yeehaw.</p>
+			<button class="button" onclick="document.location='alex_projects/1.html'">Untitled</button>
+			<button class="button" onclick="document.location='alex_projects/2.html'">Untitled2</button>
+			<br>
+			<br>
+			<br>
+			<button class="button" onclick="document.location='index.html'">Back</button>
+			</center>
+		</div>
 	</body>
 </html> 
