--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<center>
-		<h1>Banana Taffy</h1>
-		<p>Programming practice space. I love you!</p>
-		<p style="color:red"><3</p>
-		<br>
-		<button class="button" onclick="document.location='alex.html'">Alex</button>
-		<button class="button" onclick="document.location='sara.html'">Sara</button>
-		<br>
-		<br>
-		</center>
+		<div class="textbox">
+			<center>
+			<h1>Banana Taffy</h1>
+			<p>Programming practice space. I love you!</p>
+			<p style="color:red"><3</p>
+			<br>
+			<button class="button" onclick="document.location='alex.html'">Alex</button>
+			<button class="button" onclick="document.location='sara.html'">Sara</button>
+			<br>
+			<br>
+			</center>
+		</div>
 	</body>
 </html>
