--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<div class="textbox">
-			<center>
+		<center>
+		<div class="textbox">	
 			<h1>Banana Taffy</h1>
+		</div>
+		<br>
+		<div class="textbox">
 			<p>Programming practice space. I love you!</p>
 			<p style="color:red"><3</p>
 			<br>
@@ -14,7 +17,7 @@
 			<button class="button" onclick="document.location='sara.html'">Sara</button>
 			<br>
 			<br>
-			</center>
 		</div>
+		</center>
 	</body>
 </html>
