--- a/alex.html
+++ b/alex.html
@@ -4,9 +4,12 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
+		<center>
 		<div class="textbox">
-			<center>
 			<h1>Alex's Projects</h1>
+		</div>
+		<br>
+		<div class="textbox">
 			<p>Yeehaw.</p>
 			<button class="button" onclick="document.location='alex_projects/1.html'">Untitled</button>
 			<button class="button" onclick="document.location='alex_projects/2.html'">Untitled2</button>
@@ -14,7 +17,9 @@
 			<br>
 			<br>
 			<button class="button" onclick="document.location='index.html'">Back</button>
-			</center>
+			<br>
+			<br>
 		</div>
+		</center>
 	</body>
 </html> 
