--- a/alex_projects/1.html
+++ b/alex_projects/1.html
@@ -7,13 +7,13 @@
 <div class="pageblock"></div>
 <div class="main">
 	<div class="row">
-	  <div class="column side" style="background-color:#aaa;">
-		<div id="title-bar" style="background-color:#ccc;"></div>
+	  <div class="column side">
+		<div id="title-bar" class="title">Website Title</div>
+		<div id="sidebar" class="content"></div>
 	  </div>
-	  <div class="column middle" style="background-color:#bbb;">
-		<div id="location-bar" style="background-color: #ccc;"></div>
-		<div id="content" style="background-color: #ddd;">
-		</div>
+	  <div class="column middle">
+		<div id="location-bar" class="location">Location Title</div>
+		<div id="content" class="content"></div>
 	  </div>
 	</div>
 </div>
