--- a/alex_projects/2.html
+++ b/alex_projects/2.html
@@ -25,21 +25,80 @@
 	  </div>
 	  <div class="column middle">
 		<div id="content" class="content">
-			<h1 id="#road">The Road So Far</h1>
+			<article>
+			<h1 id="road">The Road So Far</h1>
+			<center><img src="images/figure1.jpg" width="500"></center>
+			<p>Gay Furry Highschool was originally devised as a <strong>joke.</strong> Since then, it evolved into what is undoubtedly one of my proudest efforts-- the start of a highly configurable and unique dating sim. I have put way too many hours into this project, primarily in the spring of 2019, but over the course of the last two years I have added systems, performed bug fixes, and wrote several prose storylines for the various characters. While I had never intended this project to get this far, I would like to push it even further. The following is what has currently been done for this project... feel free to sigh and shake your head, or look on in bewilderment.</p>
+			<br>
+			<h2>Story and Characters</h2>
+			<p>Much of the overarching GFHS story has been penciled in: there is a cult surrounding the school that can account for many of the strange happenings, and even what is going on with the concerning principal: Mr. Moseby. Most of the individual character stories directly relate the happenings in the town: you may get bits and pieces of the full story on each route but will be able to connect all of the ways the cult is affecting people, and exactl what they are up to by playing through each route. None of these furthered stories have been implemented into the game itself as of yet, just penciled in and subject to change as it is decided <emphasis>exactly</emphasis> where we want to take the story of Gay Furry Highschool.</p>
+			<br>
+			<h3>Current Character Roster</h3>
+			<p>These are the characters that are currently partially implemented into the game. This roster makes up the "core" characters of GFHS, more on that later.</p>
+			<br>
+			<center><img src="images/moseby.png" width="250"></center>
+			<p><strong>Mr. Moseby:</strong> The principal and dastardly cult leader of GFHS. While I am unsure how to implement his own route, he is crazed, fanatical, and obsessed with vore. He provides a stereotypical yandere archetype and under most conditions can be seen as an antagonist, with a few routes that are meant just to spite him and of course stop him and his cult.</p>
+			<br>
+			<center><img src="images/gfu.png" width="250"></center>
+			<p><strong>Mackai:</strong> This character is the standard for GFHS. The 'childhood friend' equivalent of other dating sims. Mackai is slow to anger, and will help the player acclimate to the school, occasionally introduce the player to other potential love interests, and provide... interesting insight into various topics. Mackai is homeless and tends to run into issues with the cult on the streets, but it's hard to get him to open up about such topics.</p>
+			<br>
+			<center><img src="images/nfu.png" width="250"></center>
+			<p><strong>Andre:</strong> Andre is a more difficult character to woo, for which routes may have him become more of an antagonistic figure towards the player. Andre is a reclusive and uptight nerd who's family wants nothing to do with him. He cares little for school and spends most of his time working on cases with the police department for his "internship". Namely, he is trying to uncover evidence of the secret cult that has been plaguing the town.</p>
+			<br>
+			<center><img src="images/sfu.png" width="250"></center>
+			<p><strong>Riley:</strong> Riley is a jock, that is clear from the moment the player meets this character, but that may not be his most prominent trait. He's not bright, but he's trying hard, and he's very kind. This character is more of a challenge than Mackai but generally provides an agreeable character. Riley has a dark secret though-- He draws adult comics. When the cult finds out about his artistic nature, he is blackmailed into doing odd things.</p>
+			<br>
+			<p><strong>Max:</strong> Max is a gamer guy. With an upbeat attitude and a love for games, Max struggles through the story as he gets closer to player... and finds many issues with the relationship he is already in. The player may choose to help him resolve his issues, steal Max outright, or even enable Max to cheat on his partner. Max's route could be wholesome or very scandalous, depending on the moral judgements made throughout.</P>
+			<br>
+			<p><strong>Ace:</strong> Ace is the resident bad boy of GFHS... and he will show very little interest in the player until he starts breaking Moseby's rules and getting detentions. Ace is a difficult character woo simply because he will only be found where criminal activity is also found, and will directly contradict Moseby's rules, making it very dangerous to pursue Ace.</p>
+			<br>
+			<p><emphasis>Several other characters have been planned but not added to the game in any capacity. These will be touched on later in the roadmap.</emphasis></p>
+			<h2>Interface</h2>
+			<center><img src="images/interface.png" width="500"></center>
+			<p>The interface for GFHS is all rainbow-themed. Headache inducingly rainbow-themed. This is something that is intended to change in the future, but for the time being it provides a colorful thematic foreground for our game. The UI is fairly self-explanatory, with menus for the players stats, relationships, money, current day, and when needed (and enabled) tutorials. While functional, better text boxes and menus should be added. (Ignore the Dbg button in the picture, that's for debugging purposes!)</p>
+			<br>
+			<h2>Game Systems</h2>
+			<center><img src="images/systems.png" width="500"></center>
+			<p>There are several systems that make up the game currently, these are what elevate GFHS from a standard visual novel with branching choices to a real gaming experience.</p>
+			<br>
+			<ul>
+				<li><strong>Relationships:</strong> It's not just the important choices that make up a characters relationship with the player. Even small interactions slowly build relationships and allow for more stories to unlock.</li>
+				<li><strong>Stats and Challenges:</strong> At various points in the game the player will be tested on the stats that they have grown and cultivated. Not just for looks, these stats can get you out of trouble and further stories.</li>
+				<li><strong>Random Events:</strong>	Not every day is the same: Each section of the day provides opportunities to interact with characters or many other things. Events can fire from walking to school, hanging out before school, morning and afternoon classes, and afterschool activities.</li>
+				<li><strong>Lunch:</strong> Lunch is the players main opportunity to take control of who they run into, by letting them spend lunch time raising their relationship with a character of their choice, often providing unique stories.</li>
+			</ul>
+			<br>
+			<h2>Graphics!</h2>
+			<p>Currently, partial graphics for 4 characters have been produced, breathing life and vibrancy into each interaction:</p>
+			<center><img src="images/mrmoseby.png" width="250">
+			<img src="images/gf happy.png" width="125">
+			<img src="images/nf happy.png" width="250">
+			<img src="images/sf happy.png" width="250"></center>
+			<br>
+			<h1 id="present">The Present</h1>
+			<p>Now that we've looked at the current state of the game... what is currently being done for Gay Furry Highschool. Most notably, writing and bug fixing. For Riley and Andre, their unique routes have been started in an attempt to get closer to having a workable demo finished. In order to prepare for GFHS to become a full game, alterations have made to the code to make it more organized and streamlined. Additionally, BUG FIXES. SO MANY BUG FIXES. In it's current state, GFHS is playable, with missing features and missing stories. On the plus side, the framework is in place to tell wonderful stories and make something real.</p>
+			<br>
+			<p>The following 'chapters' of this roadmap explain what is missing from the current game, what I want to change, what I want to add, and everything else. Everything on this site is in the order that things should potentially be completed in, but everything is heavily subject to change, based on feedback and anything else that might come up. I refuse to set anything in stone at this stage and would like as much help as possible coming up with ideas and alterations that can make GFHS... genuinely a good game (despite the fact that this was supposed to be a joke.)</p>
+			<br>
+			<h1 id="classes">Complete Classes Demo</h1>
+			<p>Demo desc.</p>
+			<br>
+			<h2>Demo To-Do List</h2>
+			<ul>
+				<li><strong>Proper Relationship Planning:</strong> </li>
+				<li><strong>Adequate Storyline Completion:</strong> </li>
+				<li><strong>Random Events:</strong>	</ul>
+			<br>
+			<h1 id="system">Clubs, Gifts, Dates, Work</h1>
 			<p></p>
-			<h1 id="#present">The Present</h1>
+			<h1 id="full">Full Character Stories</h1>
 			<p></p>
-			<h1 id="#classes">Complete Classes Demo</h1>
+			<h1 id="nonbase">Non-"Base" Characters</h1>
 			<p></p>
-			<h1 id="#system">Clubs, Gifts, Dates, Work</h1>
-			<p></p>
-			<h1 id="#full">Full Character Stories</h1>
-			<p></p>
-			<h1 id="#nonbase">Non-"Base" Characters</h1>
-			<p></p>
-			<h1 id="#finished">What Does It Look Like Finished?</h1>
+			<h1 id="finished">What Does It Look Like Finished?</h1>
 			<p></p>
 			<br><br>
+			</article>
 		</div>
 	  </div>
 	</div>
