finished gfhs roadmap!!

--- a/alex_projects/2.html
+++ b/alex_projects/2.html
@@ -47,7 +47,7 @@
 			<br>
 			<center><img src="images/sfu.png" width="250"></center>
 			<p><strong>Riley:</strong> Riley is a jock, that is clear from the moment the player meets this character, but that may not be his most prominent trait. He's not bright, but he's trying hard, and he's very kind. This character is more of a challenge than Mackai but generally provides an agreeable character. Riley has a dark secret though-- He draws adult comics. When the cult finds out about his artistic nature, he is blackmailed into doing odd things.</p>
-			<br>
+			<br+>
 			<p><strong>Max:</strong> Max is a gamer guy. With an upbeat attitude and a love for games, Max struggles through the story as he gets closer to player... and finds many issues with the relationship he is already in. The player may choose to help him resolve his issues, steal Max outright, or even enable Max to cheat on his partner. Max's route could be wholesome or very scandalous, depending on the moral judgements made throughout.</P>
 			<br>
 			<p><strong>Ace:</strong> Ace is the resident bad boy of GFHS... and he will show very little interest in the player until he starts breaking Moseby's rules and getting detentions. Ace is a difficult character woo simply because he will only be found where criminal activity is also found, and will directly contradict Moseby's rules, making it very dangerous to pursue Ace.</p>
@@ -81,22 +81,45 @@
 			<p>The following 'chapters' of this roadmap explain what is missing from the current game, what I want to change, what I want to add, and everything else. Everything on this site is in the order that things should potentially be completed in, but everything is heavily subject to change, based on feedback and anything else that might come up. I refuse to set anything in stone at this stage and would like as much help as possible coming up with ideas and alterations that can make GFHS... genuinely a good game (despite the fact that this was supposed to be a joke.)</p>
 			<br>
 			<h1 id="classes">Complete Classes Demo</h1>
-			<p>Demo desc.</p>
+			<p>Even at the early stages, I want to be able to present something properly playable, and something that we can get excited about and say "hey, that's a game!" Currently, we almost have that, but a few more things would need to be done before we could have something that could be called a demo. While still missing several core features, I would like a demo to include a week of gameplay, subtracting the afterschool, dating, and gifting systems.</p>
 			<br>
 			<h2>Demo To-Do List</h2>
 			<ul>
-				<li><strong>Proper Relationship Planning:</strong> </li>
-				<li><strong>Adequate Storyline Completion:</strong> </li>
-				<li><strong>Random Events:</strong>	</ul>
+				<li><strong>Proper Relationship Planning:</strong> Each choice and relationship is a numbers game... but these numbers do not properly mean anything or reflect any larger scope of the game. Before proceeding much further, each starting and ending point needs to be analyzed so we can see what it will look like for players to move up and down the ranks of this system, without going too fast or too slow.</li>
+				<li><strong>Adequate Storyline Completion:</strong> Once we know how long it should take to progress through the relationships, we can decide how many stories on each branch would be able to fit into a week, at maximum. Since events are random, we have to assume that a player could interact with any given character the maximum possible number of times to make sure nothing is missing. </li>
+				<li><strong>Graphics:</strong> It would be idea to have each necessary character graphic implemented before publishing a demo, this isn't completely necessary however.</li>
+				<li><strong>Clean Up:</strong> To ensure the game is playable and the passage of time throughout the game is understandable, more clear transitions should be implemented. Making the interface more visually pleasing and bug fixing can help produce a polished look.</li></ul>
+			<br>
+			<h2>What will this look like?</h2>
+			<p>At this stage, Gay Furry Highschool will have a full week in which you can interact with characters and progress through their stories in what will probably end up being a very linear fashion. Occasional challenges may occur, and the afterschool portion of the game will only be used for any necessary detentions. When doing general interactions, no options for gifting, phone numbers, or dates will be visible.</p>
 			<br>
 			<h1 id="system">Clubs, Gifts, Dates, Work</h1>
-			<p></p>
+			<p>Expanding upon the general dating sim style, GFHS is intended to feature afterschool clubs, the ability to buy and give gifts to characters, the ability to take characters out on dates, and some sort of minigame for working on Sundays to earn extra money. These options can help raise stats, progress stories, see unique stories, and progress relationships.</p>
+			<br>
+			<p>Not very many things have been decided upon for these systems. The general idea is that players will be able to choose certain clubs on certain days during the after school portion of the game. This will allow them to potentially meet new characters, raise stats by practicing activities, or interact with characters they've already met. If the player has landed detention, they will serve detention during this time. If the player has invited anyone on a date that day, then that will occur, and if nothing else, they can go home for private time to raise their sex stat or go purchase gifts. The after school portion of the game will house almost all of the currently missing systems. Options for gifts and dates will occur when talking to characters during the day, and the work minigame will take place every Sunday, when players do not have classes. This breaks up the Visual Novel style slightly.</p>
+			<br>
 			<h1 id="full">Full Character Stories</h1>
-			<p></p>
+			<p>At this point, the next thing that will need to be focused on is finishing the route for each of the "core" characters. This will include options for clubs, dates, general interactions, following their stories start to finish. Writing these stories will most likely be one of the largest undertakings of GFHS. Sex scenes are still... up for debate at this point in time.</p>
+			<br>
 			<h1 id="nonbase">Non-"Base" Characters</h1>
-			<p></p>
+			<p>In addition to the default characters that have been implemented already and are mentioned above, the intention is to take GFHS even further with more character options. These characters may be more difficult to meet than the "core" characters, or meeting a certain character might lock the player out of meeting another. It would be good to avoid too many characters being unlocked at once so the player has a decent change to talk to desirable characters on any given day. That, or an option will need to be implemented that will allow players to avoid one or two characters.</p>
+			<br>
+			<h2>Additional Planned Characters:</h2>
+			<br>
+			<p><strong>Jake:</strong> Jake is a pothead to put it gently. He's very chill and friendly, but he hates his drug habit and wants to drop it. He only started smoking because his brother got him into it, but it's caused some weird hallucinations at times.</p>
+			<br>
+			<p><strong>Diego:</strong> Diego thinks negatively of the world. He dresses in black, despite the dress code, and only listens to music he'd describe as 'punk'. To further his rebellion from his sweet, loving family... he joined Mr. Moseby's evil cult.</p>
+			<br>
+			<p><strong>Steve:</strong> Steve is not the best-looking in school, but has a good heart. Of course, Steve is disguised because he is actually a celebrity, but no one needs to know that... except the crazy stalker that is determined to get close to him.</p>
+			<br>
+			<p><strong>Thomas:</strong> Thomas is a quiet and artistic character, and will not open up to the player very easily. He is haunted by the ghost of his father, who was a famous painter.</p>
+			<br>
+			<p><strong>John Titor:</strong> John Titor is a secret character that will only be unlocked by getting detention for breaking all four of Mr. Moseby's rules. Titor is time traveler who was sent back to destroy Moseby's cult.</p>
+			<br>
 			<h1 id="finished">What Does It Look Like Finished?</h1>
-			<p></p>
+			<p>Ideally, a finished Gay Furry Highschool is a game where you can go to school to meet a large variety of characters, replay the game to see different routes, experience the game differently each time through choices and random events, raise stats, strategize how to run into favorite characters more often, or what dates and gifts they might like... all of these things as well as stuff like, pissing off characters you don't like, or uncovering different elements of the cult. Overall, this still isn't meant to be a completely serious project, but it could be a genuinely good game. A genuinely good dating sim, even. But more than anything I think a finished product for GFHS is something that will produce a few laughs. </p>
+			<br>
+			<p>I wrote this whole roadmap to illustrate for everyone interested in where we've been, where we are, and where I would personally like to go. There's so much undecided and so much subject to change but I hope I produced a clear picture of all of this and maybe even made you excited for the possiblities. It's not a small undertaking, but if there are people willing to help, pitch ideas, write, playtest... it will become a much more reasonable goal. I know this project was largely abandoned quite a while ago now, but it's never something that has left my peripherals as a writer or as a programmer. If people are no longer interested because of the gap or for any other reason, I understand, but at the same time, if there are those willing to give this a chance with me. Thank you, and please let me know.<br>  --Alex</p>
 			<br><br>
 			</article>
 		</div>
