--- a/alex_projects/2.html
+++ b/alex_projects/2.html
@@ -40,25 +40,25 @@
 			<p><strong>Mr. Moseby:</strong> The principal and dastardly cult leader of GFHS. While I am unsure how to implement his own route, he is crazed, fanatical, and obsessed with vore. He provides a stereotypical yandere archetype and under most conditions can be seen as an antagonist, with a few routes that are meant just to spite him and of course stop him and his cult.</p>
 			<br>
 			<center><img src="images/gfu.png" width="250"></center>
-			<p><strong>Mackai:</strong> This character is the standard for GFHS. The 'childhood friend' equivalent of other dating sims. Mackai is slow to anger, and will help the player acclimate to the school, occasionally introduce the player to other potential love interests, and provide... interesting insight into various topics. Mackai is homeless and tends to run into issues with the cult on the streets, but it's hard to get him to open up about such topics.</p>
+			<p><strong>Mackai the Bear:</strong> This character is the standard for GFHS. The 'childhood friend' equivalent of other dating sims. Mackai is slow to anger, and will help the player acclimate to the school, occasionally introduce the player to other potential love interests, and provide... interesting insight into various topics. Mackai is homeless and tends to run into issues with the cult on the streets, but it's hard to get him to open up about such topics.</p>
 			<br>
 			<center><img src="images/nfu.png" width="250"></center>
-			<p><strong>Andre:</strong> Andre is a more difficult character to woo, for which routes may have him become more of an antagonistic figure towards the player. Andre is a reclusive and uptight nerd who's family wants nothing to do with him. He cares little for school and spends most of his time working on cases with the police department for his "internship". Namely, he is trying to uncover evidence of the secret cult that has been plaguing the town.</p>
+			<p><strong>Andre the Fox:</strong> Andre is a more difficult character to woo, for which routes may have him become more of an antagonistic figure towards the player. Andre is a reclusive and uptight nerd who's family wants nothing to do with him. He cares little for school and spends most of his time working on cases with the police department for his "internship". Namely, he is trying to uncover evidence of the secret cult that has been plaguing the town.</p>
 			<br>
 			<center><img src="images/sfu.png" width="250"></center>
-			<p><strong>Riley:</strong> Riley is a jock, that is clear from the moment the player meets this character, but that may not be his most prominent trait. He's not bright, but he's trying hard, and he's very kind. This character is more of a challenge than Mackai but generally provides an agreeable character. Riley has a dark secret though-- He draws adult comics. When the cult finds out about his artistic nature, he is blackmailed into doing odd things.</p>
+			<p><strong>Riley the Wolf:</strong> Riley is a jock, that is clear from the moment the player meets this character, but that may not be his most prominent trait. He's not bright, but he's trying hard, and he's very kind. This character is more of a challenge than Mackai but generally provides an agreeable character. Riley has a dark secret though-- He draws adult comics. When the cult finds out about his artistic nature, he is blackmailed into doing odd things.</p>
 			<br+>
-			<p><strong>Max:</strong> Max is a gamer guy. With an upbeat attitude and a love for games, Max struggles through the story as he gets closer to player... and finds many issues with the relationship he is already in. The player may choose to help him resolve his issues, steal Max outright, or even enable Max to cheat on his partner. Max's route could be wholesome or very scandalous, depending on the moral judgements made throughout.</P>
+			<p><strong>Max the German Shephard:</strong> Max is a gamer guy. With an upbeat attitude and a love for games, Max struggles through the story as he gets closer to player... and finds many issues with the relationship he is already in. The player may choose to help him resolve his issues, steal Max outright, or even enable Max to cheat on his partner. Max's route could be wholesome or very scandalous, depending on the moral judgements made throughout.</P>
 			<br>
-			<p><strong>Ace:</strong> Ace is the resident bad boy of GFHS... and he will show very little interest in the player until he starts breaking Moseby's rules and getting detentions. Ace is a difficult character woo simply because he will only be found where criminal activity is also found, and will directly contradict Moseby's rules, making it very dangerous to pursue Ace.</p>
+			<p><strong>Ace the Ferret:</strong> Ace is the resident bad boy of GFHS... and he will show very little interest in the player until he starts breaking Moseby's rules and getting detentions. Ace is a difficult character woo simply because he will only be found where criminal activity is also found, and will directly contradict Moseby's rules, making it very dangerous to pursue Ace.</p>
 			<br>
 			<p><emphasis>Several other characters have been planned but not added to the game in any capacity. These will be touched on later in the roadmap.</emphasis></p>
 			<h2>Interface</h2>
-			<center><img src="images/interface.png" width="500"></center>
+			<center><img src="images/interface.PNG" width="500"></center>
 			<p>The interface for GFHS is all rainbow-themed. Headache inducingly rainbow-themed. This is something that is intended to change in the future, but for the time being it provides a colorful thematic foreground for our game. The UI is fairly self-explanatory, with menus for the players stats, relationships, money, current day, and when needed (and enabled) tutorials. While functional, better text boxes and menus should be added. (Ignore the Dbg button in the picture, that's for debugging purposes!)</p>
 			<br>
 			<h2>Game Systems</h2>
-			<center><img src="images/systems.png" width="500"></center>
+			<center><img src="images/systems.PNG" width="500"></center>
 			<p>There are several systems that make up the game currently, these are what elevate GFHS from a standard visual novel with branching choices to a real gaming experience.</p>
 			<br>
 			<ul>
@@ -106,20 +106,24 @@
 			<br>
 			<h2>Additional Planned Characters:</h2>
 			<br>
-			<p><strong>Jake:</strong> Jake is a pothead to put it gently. He's very chill and friendly, but he hates his drug habit and wants to drop it. He only started smoking because his brother got him into it, but it's caused some weird hallucinations at times.</p>
+			<p><strong>Jake the Sloth:</strong> Jake is a pothead to put it gently. He's very chill and friendly, but he hates his drug habit and wants to drop it. He only started smoking because his brother got him into it, but it's caused some weird hallucinations at times.</p>
 			<br>
-			<p><strong>Diego:</strong> Diego thinks negatively of the world. He dresses in black, despite the dress code, and only listens to music he'd describe as 'punk'. To further his rebellion from his sweet, loving family... he joined Mr. Moseby's evil cult.</p>
+			<p><strong>Diego the Cat:</strong> Diego thinks negatively of the world. He dresses in black, despite the dress code, and only listens to music he'd describe as 'punk'. To further his rebellion from his sweet, loving family... he joined Mr. Moseby's evil cult.</p>
 			<br>
-			<p><strong>Steve:</strong> Steve is not the best-looking in school, but has a good heart. Of course, Steve is disguised because he is actually a celebrity, but no one needs to know that... except the crazy stalker that is determined to get close to him.</p>
+			<p><strong>Steve the Rabbit:</strong> Steve is not the best-looking in school, but has a good heart. Of course, Steve is disguised because he is actually a celebrity, but no one needs to know that... except the crazy stalker that is determined to get close to him.</p>
 			<br>
-			<p><strong>Thomas:</strong> Thomas is a quiet and artistic character, and will not open up to the player very easily. He is haunted by the ghost of his father, who was a famous painter.</p>
+			<p><strong>Thomas the Goat:</strong> Thomas is a quiet and artistic character, and will not open up to the player very easily. He is haunted by the ghost of his father, who was a famous painter.</p>
 			<br>
-			<p><strong>John Titor:</strong> John Titor is a secret character that will only be unlocked by getting detention for breaking all four of Mr. Moseby's rules. Titor is time traveler who was sent back to destroy Moseby's cult.</p>
+			<p><strong>John Titor the Synth:</strong> John Titor is a secret character that will only be unlocked by getting detention for breaking all four of Mr. Moseby's rules. Titor is time traveler who was sent back to destroy Moseby's cult.</p>
 			<br>
 			<h1 id="finished">What Does It Look Like Finished?</h1>
 			<p>Ideally, a finished Gay Furry Highschool is a game where you can go to school to meet a large variety of characters, replay the game to see different routes, experience the game differently each time through choices and random events, raise stats, strategize how to run into favorite characters more often, or what dates and gifts they might like... all of these things as well as stuff like, pissing off characters you don't like, or uncovering different elements of the cult. Overall, this still isn't meant to be a completely serious project, but it could be a genuinely good game. A genuinely good dating sim, even. But more than anything I think a finished product for GFHS is something that will produce a few laughs. </p>
 			<br>
 			<p>I wrote this whole roadmap to illustrate for everyone interested in where we've been, where we are, and where I would personally like to go. There's so much undecided and so much subject to change but I hope I produced a clear picture of all of this and maybe even made you excited for the possiblities. It's not a small undertaking, but if there are people willing to help, pitch ideas, write, playtest... it will become a much more reasonable goal. I know this project was largely abandoned quite a while ago now, but it's never something that has left my peripherals as a writer or as a programmer. If people are no longer interested because of the gap or for any other reason, I understand, but at the same time, if there are those willing to give this a chance with me. Thank you, and please let me know.<br>  --Alex</p>
+			<br>
+			<h1 id="download">Download Link</h1>
+			<br>
+			<center><button class="button" onclick="window.location.href='https://github.com/ThePyromancer23/GayFurryHighschool-Dists/releases/tag/Release';">Download Gay Furry Highschool Here</button></center>
 			<br><br>
 			</article>
 		</div>
