updated max desc.

--- a/alex_projects/2.html
+++ b/alex_projects/2.html
@@ -48,7 +48,7 @@
 			<center><img src="images/sfu.png" width="250"></center>
 			<p><strong>Riley the Wolf:</strong> Riley is a jock, that is clear from the moment the player meets this character, but that may not be his most prominent trait. He's not bright, but he's trying hard, and he's very kind. This character is more of a challenge than Mackai but generally provides an agreeable character. Riley has a dark secret though-- He draws adult comics. When the cult finds out about his artistic nature, he is blackmailed into doing odd things.</p>
 			<br+>
-			<p><strong>Max the German Shephard:</strong> Max is a gamer guy. With an upbeat attitude and a love for games, Max struggles through the story as he gets closer to player... and finds many issues with the relationship he is already in. The player may choose to help him resolve his issues, steal Max outright, or even enable Max to cheat on his partner. Max's route could be wholesome or very scandalous, depending on the moral judgements made throughout.</P>
+			<p><strong>Max the German Shephard:</strong> Max is a gamer guy. With an upbeat attitude and a love for games, Max struggles through the story as he gets closer to player... and finds many issues with the relationship he is currently in. Max struggles with the realization that his relationship is terribly unhealthy and damaging.</P>
 			<br>
 			<p><strong>Ace the Ferret:</strong> Ace is the resident bad boy of GFHS... and he will show very little interest in the player until he starts breaking Moseby's rules and getting detentions. Ace is a difficult character woo simply because he will only be found where criminal activity is also found, and will directly contradict Moseby's rules, making it very dangerous to pursue Ace.</p>
 			<br>
