--- a/sara_projects/1.html
+++ b/sara_projects/1.html
@@ -26,7 +26,7 @@
 </style>
 </head>
 <body>
-	<h1> Drink Water Bitch </h1>
+	<h1> <center>Drink Water Bitch </center></h1>
 	<img src= "images/20210719_172935.jpg">
 
 </body>
